--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+
         <script src="keyboard.js"></script>
+		<script src="game.js"></script>
 	</head>
 	<body>
         <div class="block" id="block">
