--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-
+		
+		<script src="vectors.js"></script>
+		<script src="game_properties.js"></script>
+		<script src="entities.js"></script>
         <script src="keyboard.js"></script>
 		<script src="game.js"></script>
 	</head>
