--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,8 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-		
-		<script src="vectors.js"></script>
-		<script src="game_properties.js"></script>
-		<script src="entities.js"></script>
-        <script src="keyboard.js"></script>
-		<script src="game.js"></script>
+
+		<script type="module" src="main.js"></script>
 	</head>
 	<body>
         <div class="block" id="block">
