--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,19 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style/style.css">
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 
 		<script type="module" src="main.js"></script>
 	</head>
 	<body>
+		<div class="screen_field">
+			<div class="header">
+
+			</div>
+			<canvas id="test"></canvas>
+		</div>
         <div class="block" id="block">
 
         </div>
