canvas field created

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
 			<div class="header">
 
 			</div>
-			<canvas id="test"></canvas>
+			<div class="game_screen" id="game_screen">
+				<canvas id="test"></canvas>
+			</div>
 		</div>
         <div class="block" id="block">
 
