bg canvas (test animation)

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
 			</div>
 			<div class="game_screen" id="game_screen">
-				<canvas id="test"></canvas>
+				<canvas id="game"></canvas>
 			</div>
 		</div>
         <div class="block" id="block">
