full gameplay ready
1) enemies spawning
2) fireballs spawning
3) killing enemies
4) dying
-------------
-no canvas renderer
-no optimization
-enemies are not removed from array after death =(

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 		<script type="module" src="main.js"></script>
 	</head>
 	<body>
-        <div class="block" id="block">
+        <div class="block player-facing-right" id="block">
 
         </div>
 	</body>
