Pages and styles

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,18 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="style.css">
-
+		<link rel="stylesheet" type="text/css" href="styles/menu.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 
 		<script type="module" src="main.js"></script>
 	</head>
 	<body>
-        <div class="block player-facing-right" id="block">
+		
 
-        </div>
+
+        <div class="block player-facing-right" id="block"> </div>
+		<div class="game-menu">
+			<a href="main-menu.html">menu</a>
+		</div>
 	</body>
 </html>
