--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,33 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="style/style.css">
-		<title>Ghost survivor</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ghost Survival</title>
+    <link rel="stylesheet" href="styles/menu.css">
 
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=VT323&display=swap" rel="stylesheet">
 
-		<script type="module" src="main.js"></script>
-	</head>
-	<body>
-		<div class="screen_field">
-			<div class="header">
-				<div class="up_divider"></div>
-				<div class="hud">
-					<div class="hp_bar" id="hp_bar">
-						<canvas id="hp"></canvas>
-					</div>
-					<div class="energy_bar" id="energy_bar">
-						<canvas id="energy"></canvas>
-					</div>
-				</div>
-			</div>
-			<div class="game_screen" id="game_screen">
-				<canvas id="game"></canvas>
-			</div>
-		</div>
-	</body>
+</head>
+<body>
+    <div class="logo">
+        Ghost Survival
+    </div>
+    <div class="logo-img">
+        <img src="sprites/enemy1.png" alt="">
+        <img src="sprites/hero_idle_left1.png" alt="">
+    </div>
+    
+    <div class="content">
+        <div class="play-btn">
+            <a href="game.html">Play</a>
+        </div>
+        <div class="about-game-btn">
+            <a href="about-game.html">about game</a>
+        </div>
+    </div>
+</body>
 </html>
